--- a/index.html
+++ b/index.html
@@ -2,162 +2,97 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Click Here To Watch</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <meta name="facebook-domain-verification" content="tmj8qye5eh2cmjqi8kwu152kuk5rvb" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <meta name="facebook-domain-verification" content="09qau6s6vdpiubf6fivu7fpap0xm1o" />
+
+    <style>
+    body {
+    	background-color: black;
+        color: red;
+    }
+    header {
+            color: red; 
+        }
+        .img-fluid {
+            max-width: 250px;
+            max-height: 250px;
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-
-        <div class="logo"><a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
-        <div class="menu-icon"><i class="fas fa-bars"></i></div>
-        <nav>
-            <ul>
-                <li><a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9">Home</a></li>
-                <li><a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9">About</a></li>
-                <li><a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9">Contact</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" style="color: red;">HOTTY.PP.UA</a>
+                <button class="navbar-toggler" style="color: red;" type="button" data-bs-toggle="collapse" data-bs-target="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" style="color: red;"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" style="color: red;">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" style="color: red;">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" style="color: red;">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" style="color: red;">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <main>
-        <div class="PhotoHeader">
-            <div class="PhotoHeaderContent">
-                <div class="Container">
-                    <div class="PhotoPar">
-                        Latest Videos <br>
-                        <i class="fa fa-video"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <span class="ayhay">
-            <h3>Slide to watch more. Click on the video and enjoy the fullest.</h3>
-        </span>
-        <div class="owl-carousel owl-theme">
 
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/1.jpg">
-                </div>
-            </a>
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/2.jpg">
-                </div>
-            </a>
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/3.jpg">
-                </div>
-            </a>
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/4.jpg">
-                </div>
-            </a>
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/5.jpg">
-                </div>
-            </a>
-            <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                <div class="item"><img src="adsterrapic/6.jpg">
-                </div>
-            </a>
-        </div>
-        <div class="Client">
-            <div class="Container">
-                <div class="PhotoPar">Our Actors
-                    <i class="fa fa-user"></i>
-                </div>
-                <span class="ayhay">
-                    <h3>Click on their image to watch them do the unspeakable.</h3>
-                </span>
-                <div class="ClientsType">
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft TextCenter">
-                            <img src="adsterrapic/1.jpg">
-                        </div>
-                    </a>
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft">
-                            <img src="adsterrapic/2.jpg">
-                        </div>
-                    </a>
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft">
-                            <img src="adsterrapic/3.jpg">
-                        </div>
-                    </a>
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft">
-                            <img src="adsterrapic/4.jpg">
-                        </div>
-                    </a>
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft">
-                            <img src="adsterrapic/5.jpg">
-                        </div>
-                    </a>
-                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" target="_blank" rel="noopener noreferrer">
-                        <div class="ClientsTypeContent FloatLeft">
-                            <img src="adsterrapic/7.jpg">
-                        </div>
-                    </a>
-                    <div class="ClearFix"></div>
-                </div>
-            </div>
-        </div>
-    </main>
+    <div class="container mt-5 mx-auto">
+    <h1 class="text-center">Cool Nice Video Here</h1>
     <hr>
-    <footer>
-        <div class="Container">
-            <p>&copy; 2023 <a href="https://frduckist.t.me">Duckist</a>. All rights reserved.</p>
+    <section class="container mt-5">
+        <div class="row">
+            <div class="col-md-4 mb-4 text-center">
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/mHzvFRt/image.png" alt="Image 1" class="img-fluid border border-light"></a>
+                <div class="btn-play-container mt-3">
+                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
+                        <i class="fas fa-play"></i> Play
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 text-center">
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/bdQKWWm/image.png" alt="Image 2" class="img-fluid"></a>
+                <div class="btn-play-container mt-3">
+                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
+                        <i class="fas fa-play"></i> Play
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 text-center">
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/mHzvFRt/image.png" alt="Image 3" class="img-fluid border border-light"></a>
+                <div class="btn-play-container mt-3">
+                    <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
+                        <i class="fas fa-play"></i> Play
+                    </a>
+                </div>
+            </div>
         </div>
+    </section>
+    <footer>
+            <p class="mb-0 text-center" style="color: white;">© 2024 <a href="HTTPS://DUCKIST.T.ME" style="text-decoration: none; color: red;">DUCKIST</a>. All Rights Reserved.</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 3
-                },
-                1000: {
-                    items: 4
-                }
-            }
-        })
-        $('.owl-next').text("");
-        $('.owl-next').append("<i></i>")
-        $('.owl-next i').addClass("fa fa-chevron-right");
-        $('.owl-prev').text("");
-        $('.owl-prev').addClass("fa fa-chevron-left");
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const menuIcon = document.querySelector('.menu-icon');
-            const nav = document.querySelector('nav');
-
-            menuIcon.addEventListener('click', function () {
-                nav.classList.toggle('show');
-            });
-        });
-    </script>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script>document.addEventListener('keydown', function (e) {
             if (e.ctrlKey) {
                 if (e.key === 's' || e.key === 'u') {
