--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="container mt-5">
         <div class="row">
             <div class="col-md-4 mb-4 text-center">
-                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/mHzvFRt/image.png" alt="Image 1" class="img-fluid border border-light"></a>
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/n743ZJ9/1.jpg" alt="Image 1" class="img-fluid border border-light"></a>
                 <div class="btn-play-container mt-3">
                     <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
                         <i class="fas fa-play"></i> Play
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4 text-center">
-                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/bdQKWWm/image.png" alt="Image 2" class="img-fluid"></a>
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/Lk3Vmxp/2.jpg" alt="Image 2" class="img-fluid"></a>
                 <div class="btn-play-container mt-3">
                     <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
                         <i class="fas fa-play"></i> Play
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4 text-center">
-                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/mHzvFRt/image.png" alt="Image 3" class="img-fluid border border-light"></a>
+                <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9"><img src="https://i.ibb.co/PzPDLbN/3.jpg" alt="Image 3" class="img-fluid border border-light"></a>
                 <div class="btn-play-container mt-3">
                     <a href="https://ambiguityornamenttell.com/xs7gu9f9p?key=118ce656471010900682da8ae8a686c9" class="btn btn-danger btn-play btn-lg w-100">
                         <i class="fas fa-play"></i> Play
